:wrench: cors disable 체크, setDomain 해제, filter options 처리 위치 변경